--- a/css/options.css
+++ b/css/options.css
@@ -8,6 +8,8 @@ Generic text: #999 ~ #eee */
 
 body {
   width: 100%;
+  margin: 0px;
+  padding: 0px;
 }
 
 h1 {
@@ -18,12 +20,19 @@ span.header--text {
   color: #999;
   font-weight: normal;
   font-size: calc(0.5rem + 0.6vmin);
+  display: block;
+}
+
+span.warn {
+  color: #f44336;
+  font-weight: 600;
 }
 
 #wrapper {
   width: 50%;
   margin: auto;
-  margin-top: calc(0.5rem + 10vmin);
+  margin-top: calc(0.5rem + 5vmin);
+  margin-bottom: calc(0.5rem + 5vmin);
   border: 1px solid #eee;
   padding: 20px;
   border-radius: 10px;
@@ -40,7 +49,13 @@ span.header--text {
   color: #999;
 }
 
-#content--option-parent-container {
+.content--option-group {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: calc(0.5rem + 2vmin);
+  margin-bottom: calc(0.5rem + 2vmin);
+}
+
+.content--option-parent-container {
   display: flex;
   flex-flow: row nowrap;
   vertical-align: middle;
@@ -48,9 +63,63 @@ span.header--text {
 }
 
 .content--option-container {
-  border: 1px solid #ccc;
+  width: 50%;
+  padding: calc(0.5rem + 2vmin);
+}
+
+form.dev-form .submit-button {
+  border: 1px solid #bbb;
+  border-radius: 5px;
+  padding: calc(0.5rem + 0.5vmin);
+  background-color: #00a99d;
+  font-weight: bold;
+  color: #fff;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  box-shadow: 0 0px 5px rgba(100,100,100,0.20), 0 0px 5px rgba(100,100,100,0.20);
+}
+
+form.dev-form .submit-button:hover {
+  background-color: #00cc73;
+  cursor: pointer;
+  box-shadow: 0 0px 5px rgba(100,100,100,0.50), 0 0px 5px rgba(100,100,100,0.50);
+}
+
+span.small-header {
+  font-size: calc(0.5rem + 1vmin);
+  font-weight: bold;
+  display: block;
+  margin-top: calc(0.5rem + 1vmin);
 }
 
 h1.content--option-header {
   font-size: calc(0.5rem + 1vmin);
+}
+
+#view-builder--button-container {
+  padding-top: calc(0.5rem + 1vmin);
+  padding-bottom: calc(0.5rem + 1vmin);
+}
+
+#view-builder--button-container .btn {
+  padding: calc(0.5rem + 0.5vmin);
+  background-color: #00a99d;
+  color: #fff;
+  font-weight: bold;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0px 5px rgba(100,100,100,0.20), 0 0px 5px rgba(100,100,100,0.20);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+
+#view-builder--button-container .btn:hover {
+  background-color: #00cc73;
+  box-shadow: 5px rgba(100,100,100,0.50), 5px rgba(100,100,100,0.50);
+  cursor: pointer;
+}
+
+.footer--text {
+  font-size: calc(0.5rem + 0.5vmin);
+  color: #999;
 }
