--- a/css/options.css
+++ b/css/options.css
@@ -123,3 +123,18 @@ h1.content--option-header {
   font-size: calc(0.5rem + 0.5vmin);
   color: #999;
 }
+
+#toast--parent-container {
+  display: none;
+  z-index: 20;
+  max-width: 100vw;
+  bottom: calc(0.5rem + 2vh);
+  right: calc(0.5rem + 1vw);
+  background-color: #373737;
+  position: fixed;
+  font-family: sans-serif;
+  font-size: calc(0.5rem + 1vmin);
+  padding: calc(0.5rem + 2vmin);
+  color: #eee;
+  box-shadow: 0 0 15px 5px rgba(0,0,0,0.2);
+}
