--- a/css/builder.css
+++ b/css/builder.css
@@ -14,6 +14,7 @@ body {
   padding: 0px;
   font-family: sans-serif;
   color: #444;
+  background-color: #efefef;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -27,19 +28,25 @@ a {
 
 /* Body wrapper */
 #wrapper {
-  width: calc(0.5rem + 100vmin);
+  width: calc(0.5rem + 60%);
   margin: auto;
-}
-
-#build-wrap, #build-render {
+  margin-top: calc(0.5rem + 5vh);
+  margin-bottom: calc(0.5rem + 5vh);
+  background-color: #fff;
   padding: calc(0.5rem + 2vmin);
   border: 1px solid #eee;
   border-radius: 5px;
   box-shadow: 0 0px 10px rgba(100,100,100,0.10), 0 0px 10px rgba(100,100,100,0.10);
 }
 
+#build-wrap, #build-render {
+  padding: calc(0.5rem + 2vmin);
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
 #headers--container {
-  margin-top: calc(0.5rem + 5vmin);
+  /* margin-top: calc(0.5rem + 5vmin); */
 }
 
 .flexbox {
@@ -75,6 +82,38 @@ a {
   margin-left: calc(0.5rem + 74vmin);
 }
 
+#build-details {
+  margin-bottom: calc(0.5rem + 1vh);
+}
+
+#build-details input {
+  width: calc(0.5rem + 20vw);
+  padding: calc(0.5rem + 0.5vmin);
+  font-size: calc(0.5rem + 1vmin);
+  margin-top: calc(0.5rem + 1vmin);
+  margin-bottom: calc(0.5rem + 1vmin);
+}
+
+#table-id-display {
+  font-size: calc(0.5rem + 1.5vmin);
+  color: #00a99d;
+}
+
+#toast--parent-container {
+  display: none;
+  z-index: 20;
+  max-width: 100vw;
+  bottom: calc(0.5rem + 2vh);
+  right: calc(0.5rem + 1vw);
+  background-color: #373737;
+  position: fixed;
+  font-family: sans-serif;
+  font-size: calc(0.5rem + 1vmin);
+  padding: calc(0.5rem + 2vmin);
+  color: #eee;
+  box-shadow: 0 0 15px 5px rgba(0,0,0,0.2);
+}
+
 /* Form Builder wrapper */
 #build-wrap {
   font-size: calc(0.5rem + 0.3vmin);
@@ -90,9 +129,8 @@ a {
   background-color: #00a99d;
   color: #fff;
   font-weight: bold;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 5px;
-  box-shadow: 0 0px 5px rgba(100,100,100,0.20), 0 0px 5px rgba(100,100,100,0.20);
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   /* margin-left: calc(0.5rem + 93vmin); */
@@ -101,7 +139,6 @@ a {
 
 #build-render button.render-controls:hover {
   background-color: #00cc73;
-  box-shadow: 5px rgba(100,100,100,0.50), 5px rgba(100,100,100,0.50);
   cursor: pointer;
 }
 
