--- a/css/options.css
+++ b/css/options.css
@@ -10,6 +10,7 @@ body {
   width: 100%;
   margin: 0px;
   padding: 0px;
+  background-color: #efefef;
 }
 
 h1 {
@@ -35,8 +36,9 @@ span.warn {
   margin-bottom: calc(0.5rem + 5vmin);
   border: 1px solid #eee;
   padding: 20px;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 0 0px 5px rgba(100,100,100,0.10), 0 0px 5px rgba(100,100,100,0.10);
+  background-color: #fff;
 }
 
 #header--options-page {
@@ -67,8 +69,13 @@ span.warn {
   padding: calc(0.5rem + 2vmin);
 }
 
+.text--multiline {
+  width: calc(0.5rem + 90%);
+  height: calc(0.5rem + 10vh);
+}
+
 form.dev-form .submit-button {
-  border: 1px solid #bbb;
+  border: 1px solid #00a99d;
   border-radius: 5px;
   padding: calc(0.5rem + 0.5vmin);
   background-color: #00a99d;
@@ -76,13 +83,14 @@ form.dev-form .submit-button {
   color: #fff;
   transition-duration: 0.3s;
   -webkit-transition-duration: 0.3s;
-  box-shadow: 0 0px 5px rgba(100,100,100,0.20), 0 0px 5px rgba(100,100,100,0.20);
+  /* box-shadow: 0 0px 5px rgba(100,100,100,0.20), 0 0px 5px rgba(100,100,100,0.20); */
 }
 
 form.dev-form .submit-button:hover {
   background-color: #00cc73;
+  border: 1px solid #00cc73;
   cursor: pointer;
-  box-shadow: 0 0px 5px rgba(100,100,100,0.50), 0 0px 5px rgba(100,100,100,0.50);
+  /* box-shadow: 0 0px 5px rgba(100,100,100,0.50), 0 0px 5px rgba(100,100,100,0.50); */
 }
 
 span.small-header {
