--- a/css/analysis.css
+++ b/css/analysis.css
@@ -7,23 +7,306 @@ On hovers: #00cc73
 Generic text: #999 ~ #eee */
 
 body {
-  width: 100vw;
+  width: 100%;
   padding: 0px;
   margin: 0px;
-  background-color: #efefef;
+  font-family: Roboto, sans-serif;
+  color: #777;
+}
+
+a, a:hover {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #00a99d;
+}
+
+h1 {
+  font-size: calc(0.5rem + 3vmin);
+  margin: 0px;
+}
+
+h2 {
+  font-size: calc(0.5rem + 1.5vmin);
+  margin-bottom: 0px;
+}
+
+span {
+  display: block;
+}
+
+span.heavy {
+  font-weight: bold;
+  font-size: calc(0.5rem + 1vmin);
+}
+
+span.warn {
+  color: #e53935;
+  font-weight: bold;
+}
+
+span.regular {
+  color: #777;
+  font-weight: bold;
+}
+
+.analysis--buttons-normal {
+  border: 0px;
+  border-radius: 5px;
+  padding: calc(0.5rem + 0.5vmin);
+  background-color: #00a99d;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+  color: #fff;
+  font-weight: bold;
+}
+
+.analysis--buttons-normal:hover {
+  background-color: #00cc73;
+  cursor: pointer;
 }
 
 #wrapper {
-  width: 30%;
+  width: 50%;
   margin: auto;
   margin-top: calc(0.5rem + 5vh);
-  padding: calc(0.5rem + 1vmin);
-  border: 1px solid #333;
+  margin-bottom: calc(0.5rem + 5vh);
+  padding: calc(0.5rem + 2vmin);
+  border: 1px solid #fff;
+  border-radius: 5px;
   background-color: #fff;
 }
 
+#wrapper--child-container {
+  width: 90%;
+  margin: auto;
+  margin-top: calc(0.5rem + 2vmin);
+  margin-bottom: calc(0.5rem + 2vmin);
+}
+
+.notice-group {
+  margin-top: calc(0.5rem + 0.5vmin);
+  background-color: #eceff1;
+  border: 1px solid #90a4ae;
+  border-radius: 5px;
+  padding: 1vmin;
+  width: calc(0.5rem + 68%);
+}
+
+.warn-set {
+  width: calc(0.5rem + 50%);
+  margin-top: calc(0.5rem + 0.1vmin);
+  background-color: #e53935;
+  padding: 1vmin;
+  border: 1px solid #b71c1c;
+  border-radius: 5px;
+  color: #fff;
+}
+
+#open--formBuilder {
+  margin-top: calc(0.5rem + 0.1vmin);
+  margin-bottom: calc(0.5rem + 0.1vmin);
+}
+
+#analysis--header-container {
+  margin-bottom: calc(0.5rem + 4vmin);
+}
+
+#analysis--prepend {
+  margin-top: calc(0.5rem + 4vmin);
+}
+
 #form-analysis-parent-container {
+  margin-top: calc(0.5rem + 0.5vmin);
   border: 1px solid #eee;
-  padding: calc(0.5rem + 1vmin);
   display: none;
+}
+
+#analysis--append {
+  color: #555;
+  padding: calc(0.5rem + 1vmin);
+}
+
+#analysis--append h2 {
+  margin: 0px;
+  color: #888;
+}
+
+#analysis--stat-header-basics {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: calc(0.5rem + 1vmin);
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+}
+
+#statistics--table-headers {
+  font-size: calc(0.5rem + 1vmin);
+}
+
+#statistics--table-headers td {
+  padding-top: calc(0.5rem + 1vmin);
+}
+
+#statistics--value-containers td {
+  padding-bottom: calc(0.5rem + 1vmin);
+  font-size: calc(0.5rem + 2vmin);
+  color: #00a99d;
+  font-weight: bold;
+}
+
+#analysis--recent-entries-container {
+  margin-top: calc(0.5rem + 1vmin);
+}
+
+#recent-entries--data-switch {
+  font-size: calc(0.5rem + 1vmin);
+  padding: calc(0.5rem + 0.1vmin);
+  transition-duration: 0.5s;
+  -webkit-transition-duration: 0.5s;
+  color: #666;
+  margin-top: calc(0.5rem + 1vmin);
+}
+
+#recent-entries--data-switch:hover {
+  border: 1px solid #00a99d;;
+}
+
+#analysis--recent-entries {
+  width: 100%;
+  border-collapse: collapse;
+  display: none;
+}
+
+#recent-entries--header {
+  font-size: calc(0.5rem + 1.5vmin);
+  padding-bottom: calc(0.5rem + 1vmin);
+  margin-top: calc(0.5rem + 2vmin);
+}
+
+.recent-entries--data-odd {
+  font-size: calc(0.5rem + 1vmin);
+  padding: calc(0.5rem + 1vmin);
+  background-color: #eee;
+}
+
+.recent-entries--data-even {
+  font-size: calc(0.5rem + 1vmin);
+  padding: calc(0.5rem + 1vmin);
+}
+
+#text--formId {
+  padding: calc(0.5rem + 0.1vmin);
+  font-size: calc(0.5rem + 1vmin);
+  margin-right: 1vmin;
+}
+
+#recent-entries--classifier-parent-container {
+  margin-top: 5vh;
+  display: none;
+}
+
+#classifier-trigger {
+  margin-top: calc(0.5rem + 1vmin);
+  margin-bottom: calc(0.5rem + 1vmin);
+  border: none;
+  border-radius: 5px;
+  padding: calc(0.5rem + 1vmin);
+  background-color: #00a99d;
+  color: #fff;
+  font-weight: bold;
+  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.3s;
+}
+
+#classifier-trigger:hover {
+  background-color: #00cc73;
+  cursor: pointer;
+}
+
+#classifier--results-container {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: calc(0.5rem + 1vmin);
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  display: none;
+}
+
+.classifier--results-headers {
+  font-size: calc(0.5rem + 1vmin);
+}
+
+.classifier--results-headers td {
+  padding-top: calc(0.5rem + 1vmin);
+}
+
+#classifier--classification {
+  color: #00a99d;
+  font-size: calc(0.5rem + 1.5vmin);
+  font-weight: bold;
+}
+
+#positive {
+  color: #689f38;
+  font-weight: bold;
+  font-size: calc(0.5rem + 1.5vmin);
+}
+
+#negative {
+  color: #d32f2f;
+  font-weight: bold;
+  font-size: calc(0.5rem + 1.5vmin);
+}
+
+#classifier--statistics-container td {
+  padding-bottom: calc(0.5rem + 1vmin);
+  font-size: calc(0.5rem + 2vmin);
+  color: #00a99d;
+  font-weight: bold;
+}
+
+.snackbar-normal {
+  box-shadow: 0 0px 5px rgba(100,100,100,0.50), 0 0px 5px rgba(100,100,100,0.50);
+}
+
+.snackbar--message {
+  font-weight: bold;
+  font-size: calc(0.5rem + 1vmin);
+}
+
+#async, #notification {
+  position: fixed;
+  right: 5vw;
+  bottom: 5vh;
+  display: none;
+}
+
+#async--child-container {
+  padding: calc(0.5rem + 2vmin);
+  background-color: #fff;
+  color: #00a99d;
+}
+
+#notif--child-container {
+  padding: calc(0.5rem + 2vmin);
+}
+
+.error {
+  background-color: #d32f2f;
+  color: #fff;
+}
+
+#page--splitter-background {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  z-index: -1;
+  background-color: #00a99d;
 }
