--- a/css/options.css
+++ b/css/options.css
@@ -10,7 +10,6 @@ body {
   width: 100%;
   margin: 0px;
   padding: 0px;
-  background-color: #efefef;
 }
 
 h1 {
@@ -34,11 +33,22 @@ span.warn {
   margin: auto;
   margin-top: calc(0.5rem + 5vmin);
   margin-bottom: calc(0.5rem + 5vmin);
-  border: 1px solid #eee;
+  border: 1px solid #fff;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 0px 5px rgba(100,100,100,0.10), 0 0px 5px rgba(100,100,100,0.10);
   background-color: #fff;
+}
+
+#page--splitter-background {
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  z-index: -1;
+  background-color: #00a99d;
 }
 
 #header--options-page {
@@ -114,16 +124,15 @@ h1.content--option-header {
   background-color: #00a99d;
   color: #fff;
   font-weight: bold;
-  border: 1px solid #ccc;
+  border: 1px solid #00a99d;
   border-radius: 5px;
-  box-shadow: 0 0px 5px rgba(100,100,100,0.20), 0 0px 5px rgba(100,100,100,0.20);
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
 }
 
 #view-builder--button-container .btn:hover {
   background-color: #00cc73;
-  box-shadow: 5px rgba(100,100,100,0.50), 5px rgba(100,100,100,0.50);
+  border: 1px solid #00cc73;
   cursor: pointer;
 }
 
@@ -144,5 +153,4 @@ h1.content--option-header {
   font-size: calc(0.5rem + 1vmin);
   padding: calc(0.5rem + 2vmin);
   color: #eee;
-  box-shadow: 0 0 15px 5px rgba(0,0,0,0.2);
 }
