--- a/css/analysis.css
+++ b/css/analysis.css
@@ -201,6 +201,7 @@ span.regular {
 
 #recents--filtered-container {
   max-height: calc(0.5rem + 40vh);
+  overflow: auto;
 }
 
 .analysis--recent-entries-full {
@@ -235,6 +236,11 @@ span.regular {
   display: none;
 }
 
+#classifier--results-parent-container {
+  display: none;
+  margin-top: calc(0.5rem + 1vmin);
+}
+
 #classifier-trigger {
   margin-top: calc(0.5rem + 1vmin);
   margin-bottom: calc(0.5rem + 1vmin);
@@ -257,9 +263,9 @@ span.regular {
   width: 100%;
   border-collapse: collapse;
   margin-top: calc(0.5rem + 1vmin);
+  margin-bottom: calc(0.5rem + 1vmin);
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
-  display: none;
 }
 
 .classifier--results-headers {
@@ -295,6 +301,40 @@ span.regular {
   font-weight: bold;
 }
 
+#classifier--lexicon-distribution-positive, #classifier--lexicon-distribution-negative,
+#classifier--entry-classification {
+  width: 100%;
+}
+
+#lex-distro-positives, #lex-distro-negatives, #entry-classification {
+  margin-top: calc(0.5rem + 1vmin);
+  margin-bottom: calc(0.5rem + 1vmin);
+  max-height: calc(0.5rem + 40vmin);
+  overflow: auto;
+}
+
+.subdivision-headers {
+  font-size: calc(0.5rem + 1vmin);
+}
+
+.inline-display-table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid #ccc;
+}
+
+.classification--data-positive {
+  font-size: calc(0.5rem + 1vmin);
+  padding: calc(0.5rem + 1vmin);
+  background-color: #c8e6c9;
+}
+
+.classification--data-negative {
+  font-size: calc(0.5rem + 1vmin);
+  padding: calc(0.5rem + 1vmin);
+  background-color: #ffcdd2;
+}
+
 .snackbar-normal {
   box-shadow: 0 0px 5px rgba(100,100,100,0.50), 0 0px 5px rgba(100,100,100,0.50);
 }
@@ -309,6 +349,7 @@ span.regular {
   right: 5vw;
   bottom: 5vh;
   display: none;
+  z-index: 17;
 }
 
 #async--child-container {
@@ -336,4 +377,16 @@ span.regular {
   margin: 0px;
   z-index: -1;
   background-color: #00a99d;
+}
+
+#scrim {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.8;
+  z-index: 16;
+  display: none;
 }
